gccida/c2/check_format_info_recurse
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:1846:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *info, 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:1852:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:1870:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:1878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:1891:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:1916:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v71; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:1940:7: error: must use 'enum' tag to refer to type 'format_std_version'
const format_std_version *p_double_std; // rdx 
      ^
      enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2024:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v179; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2060:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *v216; // [rsp+48h] [rbp-280h] 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2206:20: error: expected expression
v25 = ( tree_node *)low; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2206:9: error: use of undeclared identifier 'tree_node'
v25 = ( tree_node *)low; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2565:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v54] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2581:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v54] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2618:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v73[1]] & 4) != 0 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2622:3: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
( sch_istable[( unsigned __int8)*format] & 4) != 0) ) 
  ^~~~~~~~~~~
  _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2630:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v79] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2648:15: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( v67 && ( sch_istable[( unsigned __int8)*v80] & 4) == 0 ) 
              ^~~~~~~~~~~
              _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2654:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)*v80] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/c-format.c:2662:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v87] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_format_info_recurse/src/obj/c-format.o] Error 1
